--- a/SemiTerm/tsconfig.json
+++ b/SemiTerm/tsconfig.json
@@ -21,6 +21,6 @@
       ]
     }
   },
-  "include": ["src", "electron.vite.config.ts"],
+  "include": ["electron.vite.config.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"],
   "exclude": ["node_modules", "out"]
 }
