--- a/SemiTerm/package.json
+++ b/SemiTerm/package.json
@@ -30,6 +30,7 @@
     "electron-store": "^8.2.0",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
+    "react-arborist": "^3.4.3",
     "react-dom": "^18.2.0",
     "ssh2": "^1.15.0",
     "tailwind-merge": "^2.3.0",
